# Strategist

./: .env.example  .gitignore  CLAUDE.md  INTEGRATION.md  LICENSE  README.md  requirements.txt
benchmarks/_template/: README.md  pack.json.example  scenarios.sample.json
benchmarks/ecommerce-cart/: README.md  pack.json
benchmarks/insurance-renewal/: README.md  pack.json
client/: app.js  index.html  logs.html  logs.js  style.css
data/: HTML_DOC_RECIPE.md  precedents-sample.db  scenarios.json
data/benchmark/: v1_scenarios.json
data/script_library/Ecommerce/: cart_abandon_recovery.yaml  closing_coupon_with_urgency.yaml  objection_price_too_high.yaml  (+2 more)
docs/: API.md  ARCHITECTURE.md  BLOG_PLAY_THE_MATCH.html  PLUGIN_GUIDE.md  README.md  STRATEGIST_OVERVIEW.html  index.html
examples/: custom_domain_pack.py  example_engine_template.py  pi_engine_template.py  run_benchmark.py  run_pluggable_benchmark.py
examples/external_engine_plugin/: pyproject.toml
examples/external_engine_plugin/strategist_echo/: __init__.py
examples/llamacpp_engine_plugin/: pyproject.toml
examples/llamacpp_engine_plugin/strategist_llamacpp/: __init__.py
poc/: __init__.py  actor.py  benchmark.py  benchmark_packs.py  customer_simulator.py  db.py  domain.py  engine.py  intent_classifier.py  luna_actor.py  post_render_gates.py  registry.py  scenario_source.py  trace_logger.py  voice_profile.py
poc/planner/: __init__.py  cot_sop.py  engine.py  playbook_reader.py  sop.py  sop_builder.py
poc/strategist/: anchor_strategy.py  capitulation_gate.py  chain_executor.py  chain_runner.py  chain_stages_supervisor.py  concrete_moves.py  concrete_moves_loader.py  conversation_phase.py  ecommerce_anchors.py  heavys_anchors.py  invariant_gates.py  staircase_gate.py
server/: cluster_plan.py  db.py  main.py  persuasion_scorer.py  random_match.py  replayer.py  session_logger.py  supervisor_full.py  win_plan.py  win_proximity.py
tests/: test_benchmark_packs.py  test_characterization.py  test_domain.py  test_registry.py  test_scenario_source.py  test_smoke.py
(+23 files in other folders)
